# Edu_prof

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 202606240001_initial_schema.py  2a5f76e91674_initial_schema.py
app/: main.py  models.py  schemas.py
app/api/: auth.py  pages.py  roi.py
app/core/: config.py  database.py  dependencies.py  exceptions.py  security.py
app/services/: auth_service.py  roi_service.py
app/static/css/: auth.css  base.css  calculator.css  home.css  styles.css
app/static/js/: app.js
app/templates/: base.html  calculator.html  home.html  login.html  register.html
app/templates/partials/: roi_results.html
